crates/reinhardt-core/macros/tests/ui/newtype/fail/skip_deref_only.rs
//! Skipping `Deref` without `DerefMut` is rejected by the macro.

use reinhardt_macros::newtype;

#[newtype(skip(Deref))]
pub struct Bad(u64);

fn main() {}
